# the_void

./: .gitignore  LICENSE  README.md  TESTING_GUIDE.md  build_frontend.py  encoding.py  env.example  hardhat.config.js  package-lock.json  package.json  pyproject.toml
artifacts/contracts/EchoToken.sol/: EchoToken.dbg.json  EchoToken.json  artifacts.d.ts
artifacts/contracts/TheVoidUnsafe.sol/: TheVoidUnsafe.dbg.json  TheVoidUnsafe.json
artifacts/contracts/interfaces/IERC20.sol/: IERC20.dbg.json
backend/: get_data_before.py
cache/: compile-cache.json  solidity-files-cache.json
contract/: EchoToken.sol  TRBcopy.sol
contracts/: TheVoidUnsafe.sol
deployments/: sepolia-deployment-1755384973518.json  sepolia-deployment-1755388717379.json  sepolia-deployment-1755390807290.json  sepolia-deployment-1755390979799.json  sepolia-deployment-1755398089019.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: TextBlob.jsx  VoidInterface.jsx  VoidViewer.jsx
frontend/src/config/: contract.js  web3.js
frontend/src/hooks/: useShout.js  useVoidData.js
scripts/: check_query_state.js  decode_original_error.js  deploy.js  interact.js  shout.js  simple_shout_test.js  singletest.js  test_shout.js  working_shout_example.js
test/: EchoToken.test.js
the_void/: main.py
utils/: encode_shout.py
void-app/: package-lock.json  package.json
void-app/src/: App.css  App.tsx
void-app/src/components/: LandingPage.tsx  MainPage.tsx
void-app/src/hooks/: useENS.ts  useWallet.ts
