[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-void"
version = "0.1.0"
description = ""
authors = [
    {name = "0xSpuddy"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.scripts]
the-void = "the_void.main:main"

[project.urls]
Homepage = "https://github.com/0xSpuddy/the_void"
Repository = "https://github.com/0xSpuddy/the_void"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
