[project]
name = "the-void"
version = "0.1.0"
description = "A Python project"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "web3>=7.13.0",
]

[project.scripts]
the-void = "the_void.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
